# aos-launcher

./: CMakeLists.txt
src/: main.c  serverlist.c  serverlist.h
